# acoustid-server

./: CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  app__config_8cpp.html  app__config_8cpp.js  app__config_8cpp__incl.map  app__config_8cpp__incl.md5  app__config_8cpp_source.html  app__config_8h.html  app__config_8h.js  app__config_8h__dep__incl.map  app__config_8h__dep__incl.md5  app__config_8h__incl.map  app__config_8h__incl.md5  app__config_8h_source.html  audio__decoder_8cpp.html  audio__decoder_8cpp.js  audio__decoder_8cpp__incl.map  audio__decoder_8cpp__incl.md5  audio__decoder_8cpp_source.html  audio__decoder_8h.html  audio__decoder_8h.js  audio__decoder_8h__dep__incl.map  audio__decoder_8h__dep__incl.md5  audio__decoder_8h__incl.map  audio__decoder_8h__incl.md5  audio__decoder_8h_source.html  audio__fingerprint__engine_8cpp.html  audio__fingerprint__engine_8cpp__incl.map  audio__fingerprint__engine_8cpp__incl.md5  audio__fingerprint__engine_8cpp_source.html  audio__fingerprint__engine_8h.html  audio__fingerprint__engine_8h.js  audio__fingerprint__engine_8h__dep__incl.map  audio__fingerprint__engine_8h__dep__incl.md5  audio__fingerprint__engine_8h__incl.map  audio__fingerprint__engine_8h__incl.md5  (+471 more)
.github/workflows/: release.yaml
configs/: default_config.json
docs/: CMakeLists.txt  Doxyfile.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  (+70 more)
src/: app_config.cpp  app_config.h  main_indexer.cpp  main_server.cpp
src/audio/: audio_decoder.cpp  audio_decoder.h
src/core/: audio_fingerprint_engine.cpp  audio_fingerprint_engine.h  fft_engine.cpp  fft_engine.h  hash_generator.cpp  hash_generator.h  peak_extractor.cpp  peak_extractor.h  voting_engine.cpp  voting_engine.h
src/domain/: i_track_repository.h  indexing_service.cpp  indexing_service.h  matching_service.cpp  matching_service.h
src/server/: http_server.cpp  http_server.h  server_config.h  task.h  task_queue.cpp  task_queue.h  task_registry.cpp  task_registry.h  worker_pool.cpp  worker_pool.h
src/storage/: sqlite_repository.cpp  sqlite_repository.h
tests/audio/: audio_decoder_test.cpp
tests/core/: fft_engine_test.cpp  hash_generator_test.cpp  peak_extractor_test.cpp  voting_engine_test.cpp
tests/domain/: domain_integration_test.cpp
tests/server/: server_test.cpp
tests/storage/: sqlite_repository_test.cpp
